--- a/localisation/TD_01_flavour_daslevania_l_english.yml
+++ b/localisation/TD_01_flavour_daslevania_l_english.yml
@@ -53,3 +53,14 @@
  morvanian_standarized_peasant_recruitment_desc: "Many peasants have fled their feudal overlords in Chilverchia and Confinia eastward, towards our country. Instead of forcing them into our armies, we should extempt them from feudal work in the wheatfields just for a few years unsolicited army service."
  morvanian_diplomatic_corpus: "Diplomatic Corpus"
  morvanian_diplomatic_corpus_desc: "If we want to keep up with our neighbour's plots and other mischiefs, we need to invest into sizeable Diplomatic Corpus that we could send everywhere when deemed necessary."
+ 
+ daslevania.1.t: "Morvanian End of Tributaries"
+ daslevania.1.desc: "With Charadeidian Horde occupied with their disloyal subjects, it is our time to strike and aim for independence from paying the tribute to the Charadeidian Reis, and secure future of our glorious duchy!"
+ daslevania.1.a: "It is time, prepare for war!"
+ daslevania.1.b: "We should await better ocassion.."
+ daslevania.2.t: "Sucession of Kurtian Crown"
+ daslevania.2.desc: "After the Shabliowsky dynasty died out in Kurtia, last prince, Andriy has left the throne heirless. It is time for the Interrex and the council to elect a new prince for our nation. Many more and less notable princes sent letters claiming their rights to Kurtian Throne, yet from those only four candidates have a real chance; Our Neighbour's Candidate, Cleidemni Prince Serafim Cleidenis, Chalian Prince Gauthier de Cotopoux, Wedlan Principality's Ruler Nephew Jan Prawy, and Dorofey Kurtensky, descendant of bastard line of Kurtensky dynasty that previously ruled Kurtia."
+ daslevania.2.a: "Cleidemni Prince"
+ daslevania.2.b: "Chalian Prince"
+ daslevania.2.c: "Wedlan Prince"
+ daslevania.2.d: "Maybe Kurtensky isn't that bad of an option."
