--- a/localisation/TD_01_flavour_daslevania_l_english.yml
+++ b/localisation/TD_01_flavour_daslevania_l_english.yml
@@ -54,6 +54,24 @@
  morvanian_diplomatic_corpus: "Diplomatic Corpus"
  morvanian_diplomatic_corpus_desc: "If we want to keep up with our neighbour's plots and other mischiefs, we need to invest into sizeable Diplomatic Corpus that we could send everywhere when deemed necessary."
  
+ daslevanian_ideas: "Daslevanian Ideas"
+ daslevanian_ideas_start: "Daslevanian Traditions"
+ daslevanian_ideas_bonus: "Daslevanian Ambition"
+ daslevanian_masters_of_the_steppe: "Masters of the Steppe"
+ daslevanian_masters_of_the_steppe_desc: "The Konmaristers are unquestioned masters of the steppes, and with living in peace and cooperation with them, we can utilize the experience of horse-masters of the steppe to its full potential."
+ daslevanian_tolerant_state: "Tolerant State"
+ daslevanian_tolerant_state_desc: "There are many Faiths that our people call theirs, so instead of fighting between ourselves, we should look aside religion and live together in a more tolerant society for the future of Daslevania."
+ daslevanian_first_empire_of_daslevans: "First Empire of Daslevans"
+ daslevanian_first_empire_of_daslevans_desc: "The Empire of United Daslevans was a big political entity that spanned a big chunk of Kakigia in the late XVIth and early-to-mid XVIIth century, with extensive administration to keep its land in check."
+ daslevanian_abolished_zakarturian_bureaucracy: "Abolished Zakarturian Bureaucracy"
+ daslevanian_abolished_zakarturian_bureaucracy_desc: "Daslevania lies on the ruins of Zakarturii Empire, and beacuse of that, inherited a lot of its bureaucracy, but most of it is redundant and bloated, making in disfunctional, we should reform into new bureaucracy systems that isn't based on Zakarturian Legacy."
+ daslevanian_prosperity_of_the_wheatfields: "Prosperity of the Wheatfields"
+ daslevanian_prosperity_of_the_wheatfields_desc: "Our wheatfields are extensive, and we have such abundance of wheat, rye, and other grains that we not only can't eat all of it, but we can barely sell the addnotional amount before it rots. We could never suffer devastation caused by hunger in our lands."
+ daslevanian_reformed_dzeshetsnik_army: "Reformed Dzeshetsnik Army"
+ daslevanian_reformed_dzeshetsnik_army_desc: "Dzeshetsnik army standard was inherited from Kurtian Military, and has become rather dated in the XVIIth century, so we had to reform it into new standards, making three old Dzeshetsniks into one new - Tridzeshetsnik, which was composed of three rows each counting ten men."
+ daslevanian_peasant_liberty: "Peasant Liberty"
+ daslevanian_peasant_liberty_desc: "With amount of peasants flowing into our country, and how easy was for them to join the Konmarister ranks, we couldn't keep them tied to land even by force. We had to abolish feudal standards and grant notable liberties to the peasantry to avoid the Brianoli scenario."
+ 
  daslevania.1.t: "Morvanian End of Tributaries"
  daslevania.1.desc: "With Charadeidian Horde occupied with their disloyal subjects, it is our time to strike and aim for independence from paying the tribute to the Charadeidian Reis, and secure future of our glorious duchy!"
  daslevania.1.a: "It is time, prepare for war!"
