--- a/localisation/TD_01_flavour_saelian_l_english.yml
+++ b/localisation/TD_01_flavour_saelian_l_english.yml
@@ -293,7 +293,7 @@
  unite_saelians_desc: "Bringing Unity to the Saelian faith will solidify us as the rulers of the world. Pro Deo!"
  saelianism_united_mod: "Saelia Indivisibilis"
  desc_saelianism_united_mod: "The saelian faith has been broken for centuries, leading to bretherens fighting each other. Thankfully, these dark times have come to and end and a new Saelian golden age can begin."
- random_conversion_tt: "Every Saelian province will have a 33% chance to convert to our religion."
+ random_conversion_tt: "Every province in §YSaelian§! religious group will have a §Y33%§! chance to become §Y[Root.Religion.GetName]§!."
  hre_modifier_tt: "Reform modifier will be transfered to our newly unified nation."
 
  saelian.9.t: "[Root.GovernmentName] of [Root.Owner.GetName] and the Empire"
