--- a/localisation/TD_01_flavour_wedla_l_english.yml
+++ b/localisation/TD_01_flavour_wedla_l_english.yml
@@ -27,3 +27,29 @@
  wedla_wedlan_glass_desc: "Togawian glassmakers are famous for their artistry relating to common life in our lands. Being made from the refined sand gives them a unique look which makes them very popular amongst the western nobility, which sees it as piece of 'oriental' culture."
  wedla_lessons_of_war: "Lessons of War"
  wedla_lessons_of_war_desc: "Frequent and brutal clashes with Ziemelians made our military very prone to adjust their strategy to achieve the least amount of losses to grant up the upper hand in the next war. Each battle is thoroughly studied and the knowledge is passed down to the new military leaders. This was greatly shown during our involvement in the League of Lippstadt and by our soldiers for hire during Mercenary Wars."
+
+ wedla.7.t: "Wedlan Renaissance"
+ wedla.7.desc: "Our province of [WED_renaissance_province.GetName] has became a center for all artists, writers and architects thanks to the support of local nobility. Many of them, with education in western universities, wish to further improve their craft inspired by the ancient and the new masters of the Saelian art. Their influence grew so large, that even the close circle of the [Root.Monarch.GetTitle] started increased greatly investing into patronage to show their worldliness."
+ wedla.7.a: "Very good"
+ wedla.7.b: "We should foster this further"
+ wedla.8.t: "Heathens of [WED_heathen_province.GetName]"
+ wedla.8.desc: "During our time converting to Saelianism, not many were as keen to embrace this foreign faith. For many years, only the people living in cities and trading with silvestrians truly believed this new faith, while nobility only kept appearances to maintain their positions of power. As times went on, more and more influential people started abandoning their old religion, so much so to even enforce it on their own population.\n\nSome of the lords however didn't want to abandon their roots. As missionaries flood their land, they request that [Root.Monarch.GetTitle] [Root.Monarch.GetName] will stop forcefully enforcing Saelianism."
+ wedla.8.a: "They will learn the teachings of Sal, whether they like it or not."
+ WED_religious_unity: "Religious Unity"
+ desc_WED_religious_unity: "[Root.Monarch.GetTitle] [Root.Monarch.GetName] has a goal of finally enforcing religious unity in the realm."
+ wedla.8.b: "What is wrong in believing in Dievo?"
+ WED_compassion_for_heathens: "Compassion for Heathens"
+ desc_WED_compassion_for_heathens: "The people of countryside are left to their own devices."
+ wedla.9.t: "The Eagle's Nest"
+ wedla.9.desc: "If Jerzy z Orlich would be known in history for one thing, it would certainly be his love for his local realm of Orle. Now he wants to spend his wealth earned from service in the military to construct a large fortification to protect his home. He requested the crown to fund half of the costs in exchange for his continued service."
+ wedla.9.a: "His wish shall be granted."
+ wedla.9.b: "He can build it - but at his own expense."
+ wedla.9.c: "He will do more good in our court."
+ WED_eagles_nest: "Eagle's Nest"
+ desc_WED_eagles_nest: "Jerzy's efforts of reinforcing his home province of [730.GetName] proved to be successful."
+ wedla.10.t: "Affairs of [Root.Monarch.GetTitle] Joachim"
+ wedla.10.desc: "On a day like any other in the court, a lady from house Kozimir demanded to see the prince at once. She claims that her son, who was thought to be of the late Jan Kozimir's lineage, was actually the result of an affair she had with [Root.Monarch.GetTitle] Joachim. Her wish is to become consort and her son to be appointed the heir to the throne. Many suspect that this is just an intricate plot to weave herself into the ruling family, however judging by reaction of Joachim there might be some truth to this story."
+ wedla.10.a: "Maybe this is the best course of actions..."
+ wedla.10.b: "Deny everything! She just wants to retain some power of her deceased husband."
+ WED_rumors_in_the_court: "Rumours in the Court"
+ desc_WED_rumors_in_the_court: "Was there truth to what that woman was saying?"
