--- a/localisation/TD_tradenodes_l_english.yml
+++ b/localisation/TD_tradenodes_l_english.yml
@@ -84,7 +84,7 @@
  upacaya_tradenode: "Upacaya"
  pradhana_tradenode: "Pradhana"
  maisetra_tradenode: "Megadya"
- upper_valvu_tradenode: "Upper Valvu"
+ upper_valvu_tradenode: "Pradespa"
  tivappu_tradenode: "Parhali"
  okukaiga_tradenode: "Okukaiga"
  toishima_tradenode: "Toishima"
