--- a/localisation/TD_government_l_english.yml
+++ b/localisation/TD_government_l_english.yml
@@ -10,7 +10,10 @@
 
  tetrarch_reform: "Tetrarchy"
  tetrarch_reform_desc: "Tetrarchy"
-
+ TETRARCHATE: "Tetrarchate"
+ TETRARCH: "Tetrarch"
+ ARCHTETRARCH: "Archtetrarch"
+ 
  usra_reform: "Usra"
  usra_reform_desc: "Fawudian clans are often clearly divided and hermetic groups, often distrusting one another and keeping all power within the clan."
  USRA: "Usra"
