--- a/localisation/emperor_estates_l_english.yml
+++ b/localisation/emperor_estates_l_english.yml
@@ -10,7 +10,7 @@
  estate_church_religious_state: "Religious State"
  estate_church_independent_inquisition: "Clerical Advisory Council"
  estate_church_new_world_mission: "Establish New World Missions"
- estate_church_papal_emissary: "Papal Emissary"
+ estate_church_papal_emissary: "Episcopal Emissary"
  estate_church_clerical_ministers: "Clerical Ministers"
  estate_church_clerical_oversight: "Oversight by the $ESTATE_NAME$"
  estate_burghers_land_of_commerce: "Land of Commerce"
