gyrdia and goods changes

--- a/localisation/loadingtips_l_english.yml
+++ b/localisation/loadingtips_l_english.yml
@@ -31,3 +31,4 @@
  LOADING_TIP_29: "Kabonen is a republic founded by Mawaqi merchants that lost their way when they tried to reach Hengtua by sea."
  LOADING_TIP_30: "Bnai Byniev is known as the Moon Kingdom, due to the fact that its founding matriarch, Shin Sawbu Nardu, was born during Full Moon."
  LOADING_TIP_31: "Mafid managed to survive the Bunelisuli invasion thanks to their willingness to purchase and sell Khan's slaves."
+ LOADING_TIP_32: "Wirosepans believe that Saelius was not a prophet, but an actual manifestation of God on Earth"
