--- a/localisation/TD_01_flavour_visparaya_l_english.yml
+++ b/localisation/TD_01_flavour_visparaya_l_english.yml
@@ -264,3 +264,9 @@
  visparayan_herders_reform_desc: "Shepherds of the Baraqhazi mountains have to seasonally travel between mutliple places, often traversing long distances."
 
  mechanic_can_form_visparaya_yes: "Enable forming Visparaya regardless of your primary culture."
+
+ decision_razaixwesah_title: "Realm of Raza"
+ decision_razaixwesah_desc: "In all of history, fertile lands of Raza have only been partially controlled by Visparayans, with the greatest extend being Varazan conquests. Now, that we managed to secure these lands for our own, we can establish the Razaixwešah."
+ realm_of_raza_mod: "Razan Realm"
+ desc_realm_of_raza_mod: "Unity must be brought to ensure prosperity."
+ 
