--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -551,6 +551,8 @@
  EHT_ADJ: "Ehtywiran"
  FRA: "Fravasum"
  FRA_ADJ: "Fravasumi"
+ FRA_RAZ: "Razaixwešah"
+ FRA_RAZ_ADJ: "Razaixwešahan"
 
  MRS: "Marstonia"
  MRS_ADJ: "Marstonian"
