--- a/localisation/prov_names_adj_l_english.yml
+++ b/localisation/prov_names_adj_l_english.yml
@@ -841,7 +841,7 @@
  PROV_ADJ840: "Matienia"
  PROV_ADJ841: "Maimome"
  PROV_ADJ842: "Cemitonte"
- PROV_ADJ843: "Alsahiljadi Coast"
+ PROV_ADJ843: "Jarithan Coast"
  PROV_ADJ844: "Ropitara"
  PROV_ADJ845: "Elesulina"
  PROV_ADJ846: "Rubmeo"
