--- a/localisation/TD_01_flavour_voitak_l_english.yml
+++ b/localisation/TD_01_flavour_voitak_l_english.yml
@@ -34,3 +34,8 @@
  bai_curtailed_aristocracy_desc: "The nobles of Voitak were always brutal, ready for war and authoritarian, trying to conserve as much power within their own caste as possible. After many reforms in Cang Phia Tay, they were finally brought to their knees and soon other states started to rebel against their overlords. Despite them still being somewhat important in the affairs of the state, their influence, especially on the army, was greatly diminished."
  bai_colonizing_spice_islands: "Colonizing Spice Islands"
  bai_colonizing_spice_islands_desc: "The islands south of Cakrawalunia have been mostly settled by small tribes, often not extending their reach beyond their villages. Thankfully, with our growing wealth and influence, supported by new innovations helping us maintain contact with these islands, we can set up outpost to export the valuable wood, spices and incense."
+
+ khen_nu_chua_reform: "Khen nu Chua"
+ khen_nu_chua_reform_desc: ""
+ bien_giura_matriarchate_reform: "Bien Giura Matriarchate"
+ bien_giura_matriarchate_reform_desc: ""
