--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -1094,3 +1094,4 @@
  morvania_proper_area: "Morvania Proper"
  nazadna_kraina_area: "Nazadna Kraina"
  geniburghi_frontier_area: "Geniburghi Frontier"
+ karamesruk_area: "Karamesrük"
