--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -4965,9 +4965,9 @@
  PROV4964: "4964"
  PROV4965: "4965"
  PROV4966: "4966"
- PROV4967: "4967"
- PROV4968: "4968"
- PROV4969: "4969"
+ PROV4967: "Leihus"
+ PROV4968: "Isenforst"
+ PROV4969: "Refeld"
  PROV4970: "4970"
  PROV4971: "4971"
  PROV4972: "4972"
