--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -15,7 +15,7 @@
  PROV14: "Derheim"
  PROV15: "Lahwell"
  PROV16: "Newmenz"
- PROV17: "Bay of Niftland"
+ PROV17: "Magreingolf"
  PROV18: "Zeschburg"
  PROV19: "Ziemelian Bay"
  PROV20: "Lerhue"
@@ -53,7 +53,7 @@
  PROV52: "Karhukorpi"
  PROV53: "Karhuvuori"
  PROV54: "Pohjantähti"
- PROV55: "East Ehren Sea"
+ PROV55: "Tummic Sea"
  PROV56: "Lumitunturi"
  PROV57: "Njuohccamávra"
  PROV58: "Sáivomearkka"
@@ -233,7 +233,7 @@
  PROV232: "Sinvri"
  PROV233: "Järtuli"
  PROV234: "Uzkolian Strait"
- PROV235: "Tummic Sea"
+ PROV235: "Daslevanian Bay"
  PROV236: "Lumiariia"
  PROV237: "Allist"
  PROV238: "Aarnijärvi"
@@ -708,7 +708,7 @@
  PROV707: "Lebyeni"
  PROV708: "Wyrmegnacian Sea"
  PROV709: "Bilohora"
- PROV710: "Southern Adasmerragadde Coast"
+ PROV710: "Bethelian Bay"
  PROV711: "Nekody"
  PROV712: "Stechoven"
  PROV713: "Novybrezi"
@@ -745,13 +745,13 @@
  PROV744: "Senowert"
  PROV745: "Kurkagan"
  PROV746: "Witkow"
- PROV747: "Northern Adasmerragadde Coast"
+ PROV747: "Adasmerragadde Coast"
  PROV748: "Eordygian Sea"
  PROV749: "Surachow"
  PROV750: "Mława"
  PROV751: "Zytnik"
  PROV752: "Western Dakhilian Sea"
- PROV753: "Strait of Aideich"
+ PROV753: "Narithian Strait"
  PROV754: "Zawila"
  PROV755: "Bialogorze"
  PROV756: "Ainaichen Coast"
@@ -3384,7 +3384,7 @@
  PROV3383: "Kolau"
  PROV3384: "Yapping"
  PROV3385: "Daifan"
- PROV3386: "Lerhue Strait"
+ PROV3386: "Borveren Strait"
  PROV3387: "Kumtsek"
  PROV3388: "Saitsek"
  PROV3389: "Santsing"
@@ -4962,9 +4962,9 @@
  PROV4961: "Zakhodkovo"
  PROV4962: "Vinokopn"
  PROV4963: "Marvirida"
- PROV4964: "4964"
- PROV4965: "4965"
- PROV4966: "4966"
+ PROV4964: "Beorscielf"
+ PROV4965: "Langbrim"
+ PROV4966: "Dúnceo"
  PROV4967: "Leihus"
  PROV4968: "Isenforst"
  PROV4969: "Refeld"
