--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -1095,3 +1095,4 @@
  nazadna_kraina_area: "Nazadna Kraina"
  geniburghi_frontier_area: "Geniburghi Frontier"
  karamesruk_area: "Karamesrük"
+ betheland_area: "Betheland"
