--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -706,7 +706,7 @@
  PROV705: "Sepretola"
  PROV706: "Mrawa"
  PROV707: "Lebyeni"
- PROV708: "Wyrmegnacian Sea"
+ PROV708: "Argenian Sea"
  PROV709: "Bilohora"
  PROV710: "Bethelian Bay"
  PROV711: "Nekody"
@@ -746,7 +746,7 @@
  PROV745: "Kurkagan"
  PROV746: "Witkow"
  PROV747: "Adasmerragadde Coast"
- PROV748: "Eordygian Sea"
+ PROV748: "Isealdun Bay"
  PROV749: "Surachow"
  PROV750: "Mława"
  PROV751: "Zytnik"
@@ -793,7 +793,7 @@
  PROV792: "Makenarin"
  PROV793: "Erakasibir"
  PROV794: "Enging"
- PROV795: "South Ithagen Sea"
+ PROV795: "Gaofar Bay"
  PROV796: "Ainil"
  PROV797: "Ithagen Sea"
  PROV798: "Sinarusid"
