--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -1096,3 +1096,4 @@
  geniburghi_frontier_area: "Geniburghi Frontier"
  karamesruk_area: "Karamesrük"
  betheland_area: "Betheland"
+ tessberaid_area: "Tessberaid"
