--- a/localisation/tmm_l_english.yml
+++ b/localisation/tmm_l_english.yml
@@ -1538,7 +1538,7 @@
  take_native_american_land: "Show Superiority"
  push_back_colonizers: "Show Superiority"
  push_back_colonizers_desc: "War goal is to show them superiority by winning battles."
- MODIFIER_MONTHLY_PIETY_ACCELERATOR: "Monthly Piety Accelerator"
+ MODIFIER_MONTHLY_PIETY_ACCELERATOR: "Monthly Imperial Allegiance Accelerator"
  CANNOT_MOVE_GREAT_PROJECT_FROM_SUBJECT_TYPE: "Cannot move Great Projects from $SUBJECTTYPES$."
  TRADE_COMPANY_AUTONOMY_MODIFIERS: "It will also have the following effects, modified by Local Autonomy (currently $AUTONOMY|%1R$):"
  OVERLORD_NAVAL_FORCE_LIMIT_MODIFIER: "Overlord Naval Force Limit Modifier"
