--- a/localisation/winds_of_change_l_english.yml
+++ b/localisation/winds_of_change_l_english.yml
@@ -1001,7 +1001,7 @@
  OMA_GRANT_NIZWA_FORT_UPGRADE: "The §YNizwa Fort§! Great Project will now grant §G-15.0%§! Fort Maintenance at Tier 3."
  OMA_COMPLETED_OMANI_FORTS_MISSION: "Has completed the §YForts of Oman§! mission"
  OMA_UNLOCK_MERCHANT_PRIVILEGE_OF_OMANI_MARINES: "Unlocks the §YStrengthen Omani Marines§! Burghers Estate Privilege, which will empower our §YMarine§! Special Units"
- OMA_BUFF_CHURCH_ADMIN_PRIVILEGES: "The §YClerical Inward Focus§! Ulema Privilege will now grant an extra §G10.0%§! Governing Capacity Modifier and §Y+0.1§! Monthly Piety Accelerator"
+ OMA_BUFF_CHURCH_ADMIN_PRIVILEGES: "The §YClerical Inward Focus§! Ulema Privilege will now grant an extra §G10.0%§! Governing Capacity Modifier and §Y+0.1§! Monthly Imperial Allegiance Accelerator"
 
  #Country Names:
  OMAN_ZANZIBAR: "Zanzibar"
