renames and gfx

--- a/localisation/TD_01_flavour_argenia_l_english.yml
+++ b/localisation/TD_01_flavour_argenia_l_english.yml
@@ -164,4 +164,14 @@
  decision_banish_ehren_merchants_title: "Banish Ehren Merchants"
  decision_banish_ehren_merchants_desc: "To protect our own interests, we must remove all merchants of Ehren origin."
  decision_banish_ehren_merchants_tt: "If we have the most trade power in §YDorchean Isles§! trade node:"
-decision_banish_ehren_merchants_tt2: "Remove the modifier §YEhren Influences§! from §YDorchean Isles§! trade node."
+ decision_banish_ehren_merchants_tt2: "Remove the modifier §YEhren Influences§! from §YDorchean Isles§! trade node."
+
+ DCH_dhorchatir: "Dhorchatìr"
+ DCH_dhorchatir_ADJ: "Dhorchatìrian"
+ DCH_saleriochta: "Salerìochta"
+ DCH_salerioctha_ADJ: "Salerìochtan"
+ dorchia.1.t: "Our Identity"
+ dorchia.1.desc: "There are many names our people and our nation have been called. Which one should we truly embrace?"
+ dorchia.1.a: "A name to be recognized"
+ dorchia.1.b: "A name to describe these lands"
+ dorchia.1.c: "A name to honour Saletiarn"
