--- a/localisation/TD_01_flavour_silberhafen_l_english.yml
+++ b/localisation/TD_01_flavour_silberhafen_l_english.yml
@@ -73,3 +73,8 @@
  td_silberhafen.8.a: "Let them establish their haven."
  td_silberhafen.8.b: "Send them to Silberhafen"
  
+ td_silberhafen.9.t: "Ehrens of Dorchia"
+ td_silberhafen.9.desc: "As we expand across the isles, many cities founded by Ehren merchants and burghers are brought under our control. Many of those communities are very open to cooperate with our government."
+ td_silberhafen.9.a: "Very Nice"
+ ehren_settlers_mod_2: "Ehren Settlers"
+ ehren_settlers_mod_2_desc: "This province was previously a center of local ehren influence in Dorchia. Now, local population will support our new rule."
