sheriff rename and reform

--- a/localisation/TD_01_flavour_argenia_l_english.yml
+++ b/localisation/TD_01_flavour_argenia_l_english.yml
@@ -8,8 +8,8 @@
  idea_epic_poems_desc: "Epic Poetry is not native to Argenian culture, but its importance cannot be underestimated, as they are not only glorious work of art, but also are used as a way to document important people, places, events and traditions. They were popularized by our poets with the influence of Saelianism and many traditional stories were adapted and rewritten to fit the greater universalist format. Many of them touch on the topics of Njunnialmmuk invasion, Wymondian conquest of Dorchean Isles, dynastic conflict in thirteen century, and adventureous expeditions to Saelian Empire, Camaria and beyond."
  idea_argenic_fishery: "Argenian Fishery"
  idea_argenic_fishery_desc: "Due to the mixing of warm and cold currents, seas flowing around the Dorchean isles have a sizeable population of variety of fish species, which were, and still are, a staple source of food for many people throughout the history of the nation. This created many unique to the region dishes. The most interesting example are fish rolls, known by Argenians as 'Trendents', which often include fish, some form of bread, mashed vegetables and occasionaly fruits."
- idea_reformed_sherrifs: "Reformed Sherrifs' Offices"
- idea_reformed_sherrifs_desc: "The title of Sherrif is almost as old as the nation of Argenia itself, but that doesn't necessary mean it was always working as intended. More often than not it lead to abuse of power, corruption, exploitation and neglect of their province. Reforming it from a hereditary title into an appointed position, as well as adjusting many privileges and duties of sherrifs will not only combat anarchy and self-will in the countryside, but will also allow our ruler to focus on more important manners in the nation."
+ idea_reformed_scirgerefas: "Reformed Scirgerefas"
+ idea_reformed_scirgerefas_desc: "The title of Scirgeref is almost as old as the nation of Argenia itself, but that doesn't necessary mean it was always working as intended. More often than not it lead to abuse of power, corruption, exploitation and neglect of their province. Reforming it from a hereditary title into an appointed position, as well as adjusting many privileges and duties of sherrifs will not only combat anarchy and self-will in the countryside, but will also allow our ruler to focus on more important manners in the nation."
  idea_land_of_castles: "The Land of Castles"
  idea_land_of_castles_desc: "If there is one thing medieval argenian architecture if famous for it's its castles. They were centers of cultural and political life of the country for the most of the history since the days of king Wymond. Most of those have been built in very defensible positions, which allows for effective fortification without the need for special treatment and costs."
  idea_hill_agriculture: "Hill Agriculture"
@@ -58,6 +58,7 @@
  argenia.5.c: "Why? I don't even like whales! Or seals for that matter..."
  
  TD_lantan_whaling: "Lantan Whaling"
+ desc_TD_lantan_whaling: "Hunting whales is really calming."
  TD_lantan_trading_outpost: "Lantan Outpost"
 
  
@@ -175,3 +176,6 @@
  dorchia.1.a: "A name to be recognized"
  dorchia.1.b: "A name to describe these lands"
  dorchia.1.c: "A name to honour Saletiarn"
+
+ professional_scirgerefas_reform: "Professional Scirgerefas"
+ professional_scirgerefas_reform_desc: ""
