gfx + fixes + de-argenianization of some surnames

--- a/localisation/TD_03_missions_wedla_l_english.yml
+++ b/localisation/TD_03_missions_wedla_l_english.yml
@@ -108,7 +108,7 @@
  wedla.4.a: "Accept"
  wedla.4.b: "Decline"
  wedla.5.t: "Wedlan Furs"
- wedla.5.desc: "Our growing influence in the Furmaric fur trade has greatly upset not only the Ehrens, but also the Chantlian entreprenuers. Many of our mechants want to profit from this newfound enterprise. On the other hand, flooding the market would certainly be useful in amounting a lot of wealth for the crown in a short period of time, greatly hurting our rivals."
+ wedla.5.desc: "Our growing influence in the Furmaric fur trade has greatly upset not only the Ehrens, but also the Chantlian entrepreneurs. Many of our mechants want to profit from this newfound enterprise. On the other hand, flooding the market would certainly be useful in amounting a lot of wealth for the crown in a short period of time, greatly hurting our rivals."
  wedla.5.a: "Furs! Furs for everyone!"
  wedla.5.b: "We should take part in this monopoly..."
  wedlan_fur: "Wedlan Furs"
