--- a/localisation/TD_colonial_regions_l_english.yml
+++ b/localisation/TD_colonial_regions_l_english.yml
@@ -37,6 +37,8 @@
  COLONIAL_ziemia_edwardzka_ADJ: "Edwardzkan"
  COLONIAL_achicnatir: "Achicnatir"
  COLONIAL_achicnatir_ADJ: "Achicnatiren"
+ COLONIAL_caoimhia: "Caoimhia"
+ COLONIAL_caoimhia_ADJ: "Caoimhian"
  COLONIAL_koniginland: "Königinland"
  COLONIAL_koniginland_ADJ: "Königinlander"
  COLONIAL_grunkuste: "Grunkuste"
