--- a/localisation/TD_parliaments_l_english.yml
+++ b/localisation/TD_parliaments_l_english.yml
@@ -6,3 +6,4 @@
  west_yermic_group_parliament_name: "Yekhen"
  OST_parliament_name: "Händlerversammlung"
  WED_parliament_name: "Rada"
+ DCH_parliament_name: "Adbar"
