--- a/localisation/domination_l_english.yml
+++ b/localisation/domination_l_english.yml
@@ -2368,7 +2368,7 @@
  absolute_british_monarchy_desc: "With the crushing defeat of the parliaments at the hands of the royalists, the monarch is the only sovereign ruler of the state. The parliament, while still existing, has been reduced to a puppet of the monarch."
  angevin_monarchy: "Angevin Monarchy"
  angevin_monarchy_desc: "The combination of the English Monarchy with the centralization aspect of the French Kingdom. While the ruler exercises a central part of the government, the parliament keeps the power of the monarch in check."
- mechanic_english_parliament_yes: "Has the §YEnglish Parliament§!"
+ mechanic_english_parliament_yes: "Enable the §YBribe§! and §YIssue§! scaling with estate loyalty and influence."
  byzantine_autocracy_reform: "Byzantine Autocracy"
  byzantine_autocracy_reform_desc: "The Byzantine government is a relic of the classical antiquity. Outdated governmental structures and lack of codified laws on the imperial succession are the great threat to the stability of the empire."
  mechanic_civil_war_on_every_new_ruler_yes: "Has a pretender uprising when a new ruler ascends the throne."
