--- a/localisation/TD_01_flavour_dorchia_l_english.yml
+++ b/localisation/TD_01_flavour_dorchia_l_english.yml
@@ -26,11 +26,11 @@
  dorchean_realm: "Dorchean Realm"
  dorchean_realm_desc: "The King of the state is elected by the reigning clan members within the family, securing power for the founders of the kingdom."
  five_lords_reform: "Five Lords"
- five_lords_reform_desc: "Landowners in Dorchia are divided into five types of lords, classified by wealth. People can ascend and descend in this hierarchy independently from their clan."
+ five_lords_reform_desc: "Landowners in Dorchia are divided into five types of lords, classified by wealth. Historically people could ascend and descend in this hierarchy independently from their clan, but nowadays the system is very rigid - every ascension must be approved by the leading ardflaith."
  lotveldian_tactics_reform: "Lotveldian Tactics"
  lotveldian_tactics_reform_desc: "Alwin of Lotveld was a military genius who pioneered the modern military tactics in the northern Mysentria."
- formalized_comhchoiteann_laws: "Codify the Comhchoiteann"
- formalized_comhchoiteann_laws_desc: "Most of Comhchoiteann have been preserved orally or written down in various way in many different documents. Through codification of these laws in one place we can ensure justice for all people."
+ formalized_comhchoiteann_laws: "Codify the Comhchoiteann laws"
+ formalized_comhchoiteann_laws_desc: "Most of Comhchoiteann laws have been preserved orally or written down in various way in many differing documents. Through codification of these laws in one place we can ensure justice for all people."
  dorchian_parliamentarism_reform: "Dorchian Parliamentarism"
  dorchian_parliamentarism_reform_desc: "Due to the growing influence of commoners, burghers and the new nobility, the king was forced to embrace the permanent parliament."
 
@@ -68,17 +68,17 @@
  dorchia.1.b: "A name to describe these lands"
  dorchia.1.c: "A name to honour Saletiarn"
  dorchia.2.t: "Arei Uprising"
- dorchia.2.desc: "REPLACE_ME"
+ dorchia.2.desc: "The war against the kingdom of Arei in 1387 was the final blow dealt to that crumbling state, being unable to move on from their heretical traditions. Despite the end of their sovereignty, the local clan of Ó Arei still triest to extert influence and maintain semblence of power they once held. Knowing they will soon be forced to convert by [Root.Monarch.GetTitle] [Root.Monarch.GetName], as a last ditch attempt, they demand to at least allow them to keep their fatih."
  dorchia.2.a: "Crush Them"
  dorchia.2.b: "We must respect our subjects, even those of different faith."
  arei_autonomy_mod: "Arei Autonomy"
  desc_arei_autonomy_mod: "People of Arei are free to practice their heretical beliefs"
  dorchia.3.t: "Séaghdhe ó Caoimh"
- dorchia.3.desc: "REPLACE_ME"
+ dorchia.3.desc: "The legends of a magical land across the vast ocean, mythical Talamgalt, is known to almost everyone in Dorchia. While most assume it to be a story made up by our sailors, there are still few that staunchly believe in its existence. As the idea of a route to Hengtua through the Niheyan ocean spread across Mysentria, many are willing to finally attempt the great journey. One of those brave men, Séaghdhe ó Caoimh, wishes to be the one to discover that land."
  dorchia.3.a: "Fund his dream"
  dorchia.3.b: "He will be more useful in the court"
  dorchia.4.t: "Ehren Arms Dealers"
- dorchia.4.desc: "REPLACE_ME"
+ dorchia.4.desc: "Ehren merchants aren't as bad as it may seem. They are very quick to find an opportunity to earn quick cash and exploit to the fullest. Seeing our state at war, many of them recently reached out to us, offering to sell some high quality ehren weaponry at, as they claim, a very low price."
  ehren_steel_mod: "Ehren Steel"
  desc_ehren_steel_mod: "Our state has just bought a large supply of Ehren weapons and armor"
  dorchia.4.a: "The weapons will surely be useful"
@@ -86,15 +86,15 @@
  dorchia.4.b_tt: "This even will NOT fire again."
  dorchia.4.c: "Maybe we can strike a better deal..."
  dorchia.5.t: "Demands of Tiarnaí"
- dorchia.5.desc: "REPLACE_ME"
+ dorchia.5.desc: "The power of adbar to influence king's politics cannot be understated. While often including only a few of the countless clans, the more powerful families are still numerous enough to be a threat to the royal government. Recently, one of those adbars commenced once again, demanding even more from the [Root.Monarch.GetTitle]."
  dorchia.5.a: "Accept"
- dorchia_tiarnai_adbar: "REPLACE_ME"
+ dorchia_tiarnai_adbar: "Tiarnaí Adbar: §Y$VAL$%§!"
  dorchia.5.b: "Decline"
  dorchia.5.c: "Make empty promises"
  dorchia.6.t: "Alwin of Lotveld"
- dorchia.6.desc: "REPLACE_ME"
+ dorchia.6.desc: "Born to a noble familiy in [1968_name.Owner.GetName], Alwin van Loftveld quickly rose to fame thanks to his fascination with modern military tactics. After falling out with the government, he sought employment in various places in Mysentria, finally ending in the court of [Root.Monarch.GetTitle] [Root.Monarch.GetName]. Knowing that the [Root.GetAdjective] needed to modernize, [Root.Monarch.GetTitle] offered him to train part of the army. After proving the effectiveness of his tactics, many were impressed and now many statesmen seek to support him in his pursues of reforming the military."
  dorchia.6.a: "Embrace his ideas partially"
- dorchia.6.b: "Restucture the entire army"
+ dorchia.6.b: "Restructure the entire army"
  dorchia.7.t: "Clan Ó Odhrán"
  dorchia.7.desc: "REPLACE_ME"
  dorchia.7.a: "They have my blessing"
@@ -112,6 +112,6 @@
  dorchia.9.c: "Seize the conflicted assets"
  dorchia.9.d: "If you cooperate the wealth will multiply tenfold"
  dorchia.10.t: "Rise of Capallaire"
- dorchia.10.desc: "REPLACE_ME"
- dorchia.10.a: "They also deserve right after all."
+ dorchia.10.desc: "The Capallaire, also known as the 'horse lords', is the poorest of the groups of the Tiarnaí, originally defined as every commoner rich enough to own a horse. In many states, they were excluded from the political activities of the rest of the nobility, often being seen as nothing more than a free peasantry.\n\nWith the codification of Comhchoiteann laws, spread of manufacturing and global trade many of those capallaires began to enrich themselves by taking part in the greater world by buying and selling furs, grain and fishing products, investing into manufactoring and funding colonial projects in order to increase their standing in the social hierarchy.\n\nAs they see how industrious people are treated in many of the Mysentrian republics like Ehrenbund and Ansgarland, they too wish to finally gain representation. Led by the charistmatic Diarmaid ó Dubháin, the republican coalition of burghers, commoners and the noble Capallaires demand to give rights to all lesser estates in [Root.GetName], justifying their actions by the lost excerpts from the Comhchoiteanns laws."
+ dorchia.10.a: "They deserve those rights after all."
  dorchia.10.b: "Bah!"
