--- a/localisation/TD_01_flavour_argenia_l_english.yml
+++ b/localisation/TD_01_flavour_argenia_l_english.yml
@@ -122,4 +122,4 @@
 
 
  professional_scirgerefas_reform: "Professional Scirgerefas"
- professional_scirgerefas_reform_desc: ""
+ professional_scirgerefas_reform_desc: "To ensure peace in the countryside, only the most educated and trained scirgerefas will hold office."
