--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -1230,8 +1230,6 @@
  HCN_ADJ: "Hac An"
  KPH: "Kim Phong"
  KPH_ADJ: "Kim Phong"
- TIN: "Thien An"
- TIN_ADJ: "Thien An"
  THN: "Thanh Ha"
  THN_ADJ: "Thanh Ha"
  DMS: "Dam Sen"
@@ -1646,3 +1644,43 @@
  DSL_ADJ: "Daslevanian"
  BKR: "Bukeria"
  BKR_ADJL: "Bukerian"
+
+ BED: "Bedau"
+ BED_ADJ: "Bedian"
+ BET: "Belanit"
+ BET_ADJ: "Belaniti"
+ FAF: "Fafine"
+ FAF_ADJ: "Fafini"
+ HUE: "Huenani"
+ HUE_ADJ: "Huenanian"
+ KSN: "Kursana"
+ KSN_ADJ: "Kursani"
+ LAR: "Lariat"
+ LAR_ADJ: "Lariatian"
+ LSB: "Lesblep"
+ LSB_ADJ: "Lesblepian"
+ NAU: "Namutama"
+ NAU_ADJ: "Namutamian"
+ OLO: "Olon"
+ OLO_ADJ: "Oloni"
+ ORP: "Orapikna"
+ ORP_ADJ: "Orapikani"
+ RUR: "Rurnilo"
+ RUR_ADJ: "Rurnilian"
+ SIL: "Silu"
+ SIL_ADJ: "Siluan"
+ TEO: "Tetoia"
+ TEO_ADJ: "Tetoian"
+ TIN: "Tianili"
+ TIN_ADJ: "Tianilian"
+ TLI: "Tlinmat"
+ TLI_ADJ: "Tlinmati"
+ UAT: "Uatali"
+ UAT_ADJ: "Utalian"
+ UNK: "Unikau"
+ UNK_ADJ: "Unikaunian"
+ WAG: "Wagatuk"
+ WAG_ADJ: "Wagatuki"
+ WUI: "Wuinitu"
+ WUI_ADJ: "Wuiniti"
+
