--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -1683,4 +1683,78 @@
  WAG_ADJ: "Wagatuki"
  WUI: "Wuinitu"
  WUI_ADJ: "Wuiniti"
+ ATA: "Atau"
+ ATA_ADJ: "Ataui"
+ HAH: "Hahane"
+ HAH_ADJ: "Hahani"
+ ISI: "Isi"
+ ISI_ADJ: "Isian"
+ KWD: "Kwadre"
+ KWD_ADJ: "Kwadreian"
+ MEK: "Metkan"
+ MEK_ADJ: "Metkani"
+ MIH: "Mihat"
+ MIH_ADJ: "Mihati"
+ MOE: "Morienu"
+ MOE_ADJ: "Morieni"
+ VIL: "Vilika"
+ VIL_ADJ: "Vilikian"
+ WEO: "Werwo"
+ WEO_ADJ: "Werwian"
+ APT: "Aapitu"
+ APT_ADJ: "Aapiti"
+ BID: "Bidonoh"
+ BID_ADJ: "Bidonohian"
+ BLH: "Bileh"
+ BLH_ADJ: "Bilehian"
+ BOB: "Bobai"
+ BOB_ADJ: "Bobaian"
+ DKA: "Dakan"
+ DKA_ADJ: "Dak"
+ FKU: "Fkuuzo"
+ FKU_ADJ: "Fkuuzi"
+ FRH: "Frohe"
+ FRH_ADJ: "Frohi"
+ HAB: "Habeh"
+ HAB_ADJ: "Habehi"
+ HMT: "Hamtnae"
+ HMT_ADJ: "Hamtnaei"
+ HUP: "Hupa"
+ HUP_ADJ: "Hupian"
+ IMN: "Imana"
+ IMN_ADJ: "Imanian"
+ LIS: "Lisane"
+ LIS_ADJ: "Lisani"
+ LOR: "Lotormoyo"
+ LOR_ADJ: "Lotormoyi"
+ PAW: "Pawahjo"
+ PAW_ADJ: "Pawahji"
+ PIL: "Pilaya"
+ PIL_ADJ: "Pilayi"
+ PIU: "Pitupit"
+ PIU_ADJ: "Pitupitian"
+ PRL: "Paralaw"
+ PRL_ADJ: "Paralawian"
+ QAN: "Qania"
+ QAN_ADJ: "Qani"
+ SLA: "Slatok"
+ SLA_ADJ: "Slatoki"
+ TIO: "Timoga"
+ TIO_ADJ: "Timogian"
+ TRH: "Tronreh"
+ TRH_ADJ: "Tronrehi"
+ ULA: "Ulaitu"
+ ULA_ADJ: "Ulaiti"
+ UMP: "Umpanbi"
+ UMP_ADJ: "Umpanbian"
+ UTA: "Utansu"
+ UTA_ADJ: "Utansi"
+ VEO: "Vetoru"
+ VEO_ADJ: "Vetori"
+ WEE: "We"
+ WEE_ADJ: "Wei"
+ YOT: "Yotakish"
+ YOT_ADJ: "Yotakishi"
+
+
 
