--- a/localisation/TD_01_flavour_dorchia_l_english.yml
+++ b/localisation/TD_01_flavour_dorchia_l_english.yml
@@ -96,15 +96,15 @@
  dorchia.6.a: "Embrace his ideas partially"
  dorchia.6.b: "Restructure the entire army"
  dorchia.7.t: "Clan Ó Odhrán"
- dorchia.7.desc: "REPLACE_ME"
+ dorchia.7.desc: "Most of the powerful Dorchian claims can trace their prestige and wealth to the more chaotic time, where raids and conflicts were a common occurence. Descendants of Odhrán are not one of those clans.\n\nTheir wealth came mostly through the efforts of Nynniaw ó Odhrán, who greatly invested into whaling and trade with Ehrenstaat, earning him a lot of renown and income. His family continued his legacy, focusing on finding new production methods and implementing them in their estates. Now their wealth grew so large, they wish to construct their own city, to commemorate founder of their clan."
  dorchia.7.a: "They have my blessing"
  dorchia.7.b: "Offer them opportunities overseas"
  dorchia.8.t: "Eithne of Ainil"
- dorchia.8.desc: "REPLACE_ME"
+ dorchia.8.desc: "In most situations, when the time to elect the heir to the crown of [Root.GetName] comes, the clan ends up picking the eldest young man as it is customary to show respect to the ruling [Root.Monarch.GetTitle]. Rarely it happens that due to political struggles, someone else is picked. Even rarer is the situation where a truly brilliant individual is promoted to ascend to the throne.\n\nSuch situation has commenced in the court of [Root.Monarch.GetTitle] [Root.Monarch.GetName]. Fearing the lack of successor, one of the clansmen proposed his own daughter, Eithne, as the succcesor. While many were outraged at his proposal, there are still few that see her as someone worth keeping close."
  dorchia.8.a: "She will secure our succession"
  dorchia.8.b: "Grant her a position in court"
  dorchia.9.t: "Clash of Clans"
- dorchia.9.desc: "REPLACE_ME"
+ dorchia.9.desc: "There is a saying in Dorchia that no day goes by without two clans fighting. While most of those conflicts start and resolve within days, there are some that can drag on for years.\n\nOne such conflict recently emerged between two rival clans. Nobles from [clan_1_province.GetName] claim that the clansmen of [clan_2_province.GetName] recently attacked some of their members, stealing their luxury goods. The other clan claims that the goods were purchased legally. Both of the clans promise to use the attained wealth to improve the local economy, but no matter which side we will support the other one might rebel."
  dorchia.9.a: "Punish the second clan"
  tiarnai_upset_mod: "Defiant Tiarnaí"
  desc_tiarnai_upset_mod: "Local clan is outraged at the decision of our [Root.Monarch.GetTitle]"
@@ -115,3 +115,6 @@
  dorchia.10.desc: "The Capallaire, also known as the 'horse lords', is the poorest of the groups of the Tiarnaí, originally defined as every commoner rich enough to own a horse. In many states, they were excluded from the political activities of the rest of the nobility, often being seen as nothing more than a free peasantry.\n\nWith the codification of Comhchoiteann laws, spread of manufacturing and global trade many of those capallaires began to enrich themselves by taking part in the greater world by buying and selling furs, grain and fishing products, investing into manufactoring and funding colonial projects in order to increase their standing in the social hierarchy.\n\nAs they see how industrious people are treated in many of the Mysentrian republics like Ehrenbund and Ansgarland, they too wish to finally gain representation. Led by the charistmatic Diarmaid ó Dubháin, the republican coalition of burghers, commoners and the noble Capallaires demand to give rights to all lesser estates in [Root.GetName], justifying their actions by the lost excerpts from the Comhchoiteanns laws."
  dorchia.10.a: "They deserve those rights after all."
  dorchia.10.b: "Bah!"
+
+ doctrine_dorchia_cuardaitheoir_saibhris: "Cuardaitheoir Saibhris"
+ doctrine_dorchia_cuardaitheoir_saibhris_desc: "The main goal of the Dorchean army is to fish and trade, not to wage war."
