--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -622,7 +622,7 @@
  PROV621: "Teidengen"
  PROV622: "Ruhigwald"
  PROV623: "Grobhalde"
- PROV624: "Gyrdian Coast"
+ PROV624: "Gyrdian Bay"
  PROV625: "Vizäm"
  PROV626: "Diechtung"
  PROV627: "Kupfthal"
