--- a/localisation/TD_regions_l_english.yml
+++ b/localisation/TD_regions_l_english.yml
@@ -37,7 +37,7 @@
  northern_ocean: "Northern Ocean"
  mesutia_region: "Mesutia"
  lamedin_region: "Lamedin"
- cassidy_valley_region: "Cassidy Valley"
+ cassidy_valley_region: "Casaide Valley"
  tarhia_region: "Tarhia"
  lower_moorfluss_region: "lower Moorfluss"
  eastern_chantlian_coast_region: "Mathilda's Bay"
