--- a/localisation/TD_tradenodes_l_english.yml
+++ b/localisation/TD_tradenodes_l_english.yml
@@ -38,8 +38,7 @@
  new_wesburg_tradenode: "New Wessburg"
  dagappa_tradenode: "Dagappa"
  hermanns_bay_tradenode: "Hermann's Bay"
- cassidy_tradenode: "Cassidy"
- sipiwimekya_estuary_tradenode: "Sipiwimekya Estuary"
+ sipiwimekya_estuary_tradenode: "Dochas"
  tarhia_tradenode: "Lower Tarhia"
  thiccet_tradenode: "Thiccet"
  qarasam_tradenode: "Qarasam"
@@ -64,7 +63,7 @@
  secesa_tradenode: "Secesa"
  coicemhar_tradenode: "Coicemhar"
  blawenn_tradenode: "Blawenn"
- sipiwimekya_valley_tradenode: "Sipiwimekya Valley"
+ sipiwimekya_valley_tradenode: "Sipiwimekya"
  ashmorland_tradenode: "Ashmorland"
  khantadun_tradenode: "Khanta"
  paredesh_tradenode: "Sursurthan"
